@@ -13,8 +13,8 @@ import java.io.IOException;
 public interface IActor {
 
     //Send an object and wait for a response object
-    Object ask( Object question ) throws IOException, ClassNotFoundException;
+    String ask( String question ) throws IOException, ClassNotFoundException;
 
     //Send a one-way message
-    void tell( Object statement ) throws IOException;
+    void tell( String statement ) throws IOException;
 }
